# code2Emil

./: package-lock.json  package.json  tust-toolchain.toml
contract/: Cargo.toml  magicink.rs  package.json
contract/psp34-tests/: Cargo.toml  lib.rs
contract/wizard/: Cargo.toml  lib.rs
frontend/: tsconfig.json
